[metadata]
name = python_calculator
version = 1.0.0
author = DevSecOps Team
author_email = devsecopscoreteam@bcbsa.com
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]   
package_dir = 
    =  src
packages = find:
python_requires =  >=3.9

[options.packages.find]
where = src