[metadata]
name = python_pip
version = 1.0.0
author = mark washburn
author_email = mark@mrwconsulting.tech
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]   
package_dir = 
    =  src
packages = find:
python_requires =  >=3.9

[options.packages.find]
where = src