[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "sample project"
homepage = "https://github.com/mrwconsulting/shinto-samples/python-poetry"
authors = ["Mark Washburn <mark@mrwconsulting.tech>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
helloworld = 'helloworld.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
